Changed and optimized directory structure

--- a/Assets/cafe.css
+++ b/Assets/cafe.css
@@ -3,7 +3,7 @@
 
 body {
     
-   background-image: url(Assets/background.jpg);
+   background-image: url(../Assets/Media/background.jpg);
    font-family: 'Square Peg', sans-serif;
    padding: 20px;
 
